Fixed MovieList spacing issue

--- a/app/components/MovieList.css
+++ b/app/components/MovieList.css
@@ -3,8 +3,7 @@
   font-size: 4vw;
   text-transform: uppercase;
   text-align: center;
-  padding-top: 2rem;
-  margin: 0;
+  padding-top: 5rem;
 }
 
 .fancy {
